--- a/contact.html
+++ b/contact.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Contact</title>
+    <!--Bootstrap style link-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+   <!--External css link-->
     <link rel="stylesheet" href="main.css">
+    <!--Font awesome Link-->
+    <script src="https://kit.fontawesome.com/45b8d3bce0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <!--Adding Margin and Border for sm to xl screens-->
-    <div style="border:1px solid lightblue;" class="m-sm-3 m-md-3 m-lg-3 m-xl-3">
+    <div style="border-left: 1px solid lightblue; border-right: 1px solid lightblue; border-bottom: 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
         <!--Nav Bar-->
         <div id="header">
            <nav class="navbar navbar-expand-sm navbar-dark bg-info">
               <div class="container">
-                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                    <span class="navbar-toggler-icon"></span>
                  </button>
                  <a href="#About Me" class="navbar-brand"><h3>Vasavi</h3></a>
                  <!-- lists of Links in nav bar-->
-                 <div class="collapse navbar-collapse" id="navbar">
+                 <div class="collapse navbar-collapse" id="navbarResponsive">
                      <ul class="navbar-nav ml-auto" >
                         <li class="nav-item">
                            <a href="index.html" class="nav-link">About Me</a>
@@ -37,7 +41,7 @@
                 </div>
             </nav>
         </div>
-    <!--contact-->
+    <!--contact form-->
     <div id="contact">
         <div class="container">
             <div class="row">
@@ -91,7 +95,20 @@
         </div>
    
     </div>
-</div>
-</div>    
+ 
+<!--Footer-->
+<footer>
+    <div class="row text-center">
+      <div class="col-md-4 icons">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-linkedin"></i>
+      </div>
+        <div class="col-md-4">
+          <p>copyright</p>
+        </div>
+    </div>
+  </footer>
+</div>   
 </body>
 </html>
