--- a/portfolio.html
+++ b/portfolio.html
@@ -10,20 +10,24 @@
     <link rel="stylesheet" href="main.css"> 
     <!--Font awesome Link-->
     <script src="https://kit.fontawesome.com/45b8d3bce0.js" crossorigin="anonymous"></script>
+    <!--js links for toggler-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Adding Margin and Border for sm to xl screens-->
-    <div style="border-left: 1px solid lightblue; border-right: 1px solid lightblue; border-bottom: 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1>
+    <div style="border-left: 1px solid lightblue; border-right: 1px solid lightblue; border-bottom: 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
         <!--Nav Bar-->
         <div id="header">
-            <nav class="navbar navbar-expand-sm navbar-dark bg-info">
+            <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
                <div class="container">
-                  <button class="navbar-toggler" type="button" data-toggle="collapse navbar-collapse" data-target="#navbarResponsive">
+                  <button class="navbar-toggler" type="button" data-toggle="collapse navbar-collapse" data-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <a href="#About Me" class="navbar-brand"><h3>Vasavi</h3></a>
+                  <a href="index.html" class="navbar-brand"><h3>Vasavi</h3></a>
                   <!-- lists of Links in nav bar-->
-                  <div class="collapse navbar-collapse" id="navbarresponsive">
+                  <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav ml-auto" >
                          <li class="nav-item">
                             <a href="index.html" class="nav-link">About Me</a>
