updated ReadMe file

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                    <span class="navbar-toggler-icon"></span>
                  </button>
-                 <a href="#About Me" class="navbar-brand"><h3>Vasavi</h3></a>
+                 <a href="index.html" class="navbar-brand"><h3>Vasavi</h3></a>
                  <!-- lists of Links in nav bar-->
                  <div class="collapse navbar-collapse" id="navbarNav">
                      <ul class="navbar-nav ml-auto" >
@@ -101,7 +101,7 @@
     </div>
   </div>
 <!--Footer-->
-<footer>
+<footer class="footer">
     <div class="row text-center">
       <div class="col-md-4 icons">
         <i class="fab fa-facebook-square"></i>
