--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!--Adding Margin and Border for sm to xl screens-->
-    <div style="border-left: 1px solid lightblue; border-right: 1px solid lightblue; border-bottom: 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
+    <div style="border: 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
         <!--Nav Bar-->
         <div id="header">
             <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 text-white">
                     <h3><u>Portfolio</u></h3>
                 </div>
             </div>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <!--Footer-->
-      <footer>
+      <footer class="footer">
         <div class="row text-center">
           <div class="col-md-4 icons">
             <i class="fab fa-facebook-square"></i>
@@ -102,7 +102,7 @@
             </div>
         </div>
     </footer>
-        </div>
+</div>
     
 </body>
 </html>
