--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <!--Adding Margin and Border for sm to xl screens-->
-    <div style="border-left: 1px solid lightblue; border-right: 1px solid lightblue; border-bottom: 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
+    <div style="border : 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
     
       <!--Nav Bar-->
     <div id="header">
@@ -70,7 +70,7 @@
         </div>
     </div>
       <!--Footer-->
-      <footer>
+      <footer class="footer mt-auto">
         <div class="row text-center">
           <div class="col-md-4 icons">
             <i class="fab fa-facebook-square"></i>
@@ -82,7 +82,7 @@
             </div>
         </div>
       </footer>
-   
+</div>
     
 </body>
 </html>
