--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     <div class="row">
                         <div class="col-md-6">
                     <div class="form-group">
-                        <label for="exampleFormControlInput">Name</label>
+                        <label for="exampleFormControlInput" class="text-white">Name</label>
                         <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name"> 
                    </div>
                         </div>
@@ -71,7 +71,7 @@
                     <div class="row">
                         <div class="col-md-6">
                      <div class="form-group">
-                        <label for="exampleInputEmail1">Email</label>
+                        <label for="exampleInputEmail1"class="text-white">Email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="example@gmail.com">
                      </div>
                         </div>
@@ -79,7 +79,7 @@
                     <div class="row">
                         <div class="col-md-6">
                      <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Message</label>
+                        <label for="exampleFormControlTextarea1" class="text-white">Message</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                      </div>
                         </div>
@@ -101,7 +101,7 @@
     </div>
   </div>
 <!--Footer-->
-<footer class="footer">
+<footer>
     <div class="row text-center">
       <div class="col-md-4 icons">
         <i class="fab fa-facebook-square"></i>
