--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 </head>
 <body>
     <!--Adding Margin and Border for sm to xl screens-->
-    <div style="border : 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
-    
-      <!--Nav Bar-->
-    <div id="header">
+    <div style="border: none;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
+     <!--Nav Bar-->
+     <div id="header">
        <nav class="navbar navbar-expand-sm navbar-dark bg-secondary sticky-top">
           <div class="container">
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -70,7 +69,8 @@
         </div>
     </div>
       <!--Footer-->
-      <footer class="footer mt-auto">
+      <footer> 
+        <div class="container">
         <div class="row text-center">
           <div class="col-md-4 icons">
             <i class="fab fa-facebook-square"></i>
@@ -81,6 +81,7 @@
               <p>copyright</p>
             </div>
         </div>
+      </div>
       </footer>
 </div>
     
