--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!--Adding Margin and Border for sm to xl screens-->
-    <div style="border: 0;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
+    <div style="border: none;" class="m-sm-1 m-md-1 m-lg-1 m-xl-1">
         <!--Nav Bar-->
         <div id="header">
             <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
@@ -90,7 +90,7 @@
             </div>
         </div>
         <!--Footer-->
-      <footer class="footer">
+      <footer>
         <div class="row text-center">
           <div class="col-md-4 icons">
             <i class="fab fa-facebook-square"></i>
